--- a/leftwm/themes/farout/eww-bar/eww.scss
+++ b/leftwm/themes/farout/eww-bar/eww.scss
@@ -1,51 +1,57 @@
 * {
-  all: unset; //Unsets everything so you can style everything from scratch
+  all: unset; // Unsets everything so you can style everything from scratch
 }
 
 //Global Styles
 .bar0 {
   background-color: #1F1311;
   color: #E0CCAE;
-  padding: 10px;
+  padding: 4em;
   font-family: "Ubuntu Mono Nerd Font";
   font-size: medium;
 }
 
-// Styles on classes (see eww.yuck for more information)
+// Workspaces
+.ws {
+  margin: 0.5em;
+}
 
-// .sidestuff slider {
-//   all: unset;
-//   color: #ffd5cd;
-// }
+.ws-button-mine {
+  color: #BF472C;
+}
+
+.ws-button-visible {
+  color: #A67458;
+}
+
+.ws-button-busy {
+  color: #A67458;
+}
+
+.ws-button {
+  color: #A67458;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+}
+
+// Sidestuff
+.label {
+    font-size: large;
+    margin-right: 0.5em;
+}
 
 .metric scale trough {
   all: unset;
   background-color: #0F0908;
-  border-radius: 10px;
-  min-height: 5px;
-  min-width: 50px;
-  margin-left: 10px;
-  margin-right: 20px;
+  border-radius: 1em;
+  min-height: 0.3em;
+  min-width: 3em;
+  margin-left: 0.5em;
+  margin-right: 1em;
 }
+
 .metric scale trough highlight {
   all: unset;
   background-color: #BF472C;
-  border-radius: 10px;
-}
-.ws {
-  margin-top: 2px;
-}
-.ws-button-mine {
-  color: #BF472C;
-}
-.ws-button-visible {
-  color: #BF472C;
-}
-.ws-button-busy {
-  color: #A67458;
-}
-.ws-button {
-  color: #A67458;
-  margin-left: 2px;
-  margin-right: 2px;
+  border-radius: 1em;
 }
