--- a/leftwm/themes/nord/sizes.liquid
+++ b/leftwm/themes/nord/sizes.liquid
@@ -1,3 +1,3 @@
-{% for w in workspaces %}
-Static { xpos = {{w.x}} , ypos = {{w.y}}, width = {{w.w}}, height = 24 }
+{% for workspace in workspaces %}
+{{workspace.w}}x{{workspace.h}}+{{workspace.x}}+{{workspace.y}}
 {% endfor %}
