[leftwm] update nord bar

--- a/leftwm/themes/nord/eww-bar/eww.scss
+++ b/leftwm/themes/nord/eww-bar/eww.scss
@@ -42,7 +42,7 @@
 
 .metric scale trough {
   all: unset;
-  background-color: #0F0908;
+  background-color: #4C566A;
   border-radius: 1em;
   min-height: 0.3em;
   min-width: 3em;
