--- a/leftwm/themes/nord/eww-bar/eww.scss
+++ b/leftwm/themes/nord/eww-bar/eww.scss
@@ -8,6 +8,8 @@
   color: #D8DEE9;
   font-family: "Ubuntu Mono Nerd Font";
   font-size: medium;
+  border-radius: 0.7em;
+  opacity: 0.96;
 }
 
 // Workspaces
