--- a/leftwm/themes/4k/nord/eww-bar/eww.scss
+++ b/leftwm/themes/4k/nord/eww-bar/eww.scss
@@ -7,7 +7,7 @@
   background-color: #3B4252;
   color: #D8DEE9;
   font-family: "Ubuntu Mono Nerd Font";
-  font-size: medium;
+  font-size: 2.0em;
   border-radius: 0.7em;
   opacity: 0.96;
 }
@@ -37,7 +37,7 @@
 
 // Sidestuff
 .label {
-  font-size: large;
+  font-size: 1.0em;
   margin-right: 0.5em;
   color: #AEB3BB;
 }
