--- a/leftwm/themes/farout/eww-bar/eww.scss
+++ b/leftwm/themes/farout/eww-bar/eww.scss
@@ -18,7 +18,7 @@
 }
 
 .ws-button-mine {
-  color: #BF472C;
+  color: #A74D39;
 }
 
 .ws-button-visible {
@@ -54,6 +54,6 @@
 
 .metric scale trough highlight {
   all: unset;
-  background-color: #BF472C;
+  background-color: #A74D39;
   border-radius: 1em;
 }
